*** 注意 *** 大修改 1.ForegroundService不维护全部Habit列表. 2.只使用Repository的一级缓存作为即时数据(Habit列表). 3.增删都要通过Service操作,以保证同时增删它维护的活动habit列表